v10/fixtures/ast/errors/rescue_catch/source.able
do {
  raise "boom"
} rescue {
  case err => {
    print(err)
    "handled"
  }
}
